changed moon color, added shadow behind current temp, fixed bug showing Today instead of the day of the week a week from now

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,6 +34,10 @@ body, html {
   .large {
      font-size: 5.5rem;
   }
+
+  .shadow {
+    text-shadow: 2px 2px 8px rgba(0,0,0, 0.3);
+  }
   
 a:hover{
     text-decoration: none;
